--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "scripts": {
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js"
-  },
+ "scripts": {
+  "start": "nodemon index.js",
+  "dev": "nodemon index.js"
+},
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
