--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
  "scripts": {
-  "start": "nodemon index.js",
-  "dev": "nodemon index.js"
-},
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9",
-    "uuid": "^11.0.5"
-  }
+  "start": "node index.js",
+   "build": "npm install && npm prune --production"
+ },
+ "dependencies": {
+  "bcrypt": "^5.1.1",
+  "body-parser": "^1.20.3",
+  "compression": "^1.7.5",
+  "cookie-parser": "^1.4.7",
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.7",
+  "express": "^4.21.2",
+  "helmet": "^8.0.0",
+  "jsonwebtoken": "^9.0.2",
+  "multer": "^1.4.5-lts.1",
+  "mysql2": "^3.12.0",
+  "nodemon": "^3.1.9",
+  "uuid": "^11.0.5"
+ }
 }
