--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9",
     "uuid": "^11.0.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=18.x"
