--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Your project description",
   "main": "index.js",
   "scripts": {
-    "start": "forever start index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
